@@ -1,3 +1,10 @@
+2005-07-10  Mark Kettenis  <kettenis@gnu.org>
+
+	* gdb.mi/mi2-stack.exp (test_stack_locals_listing): Remove test for
+	-stack-select-frame without arguments.
+	(test_stack_frame_listing): Add test for newly implemented command
+	-stack-info-frame.
+
 2005-07-06  Bob Rossi  <bob@brasko.net>
 
 	* gdb.mi/mi-basics.exp (test_setshow_inferior_tty): Test MI tty
